--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ footer a:hover {
                         <div class="col-md-6 mb-3">
                             <div style="background: rgba(255,255,255,0.2); padding: 1.5rem; border-radius: 10px;">
                                 <h5 style="color: black; font-weight: 600;"><i class="fas fa-leaf me-2"></i>Responsabilidad Ambiental</h5>
-                                <p style="color: white; margin: 0;">Balancear costos vs. impacto ecológico. Ejemplo: decidir si invertir en tecnologías limpias aunque sean más costosas inicialmente pero beneficien al planeta.</p>
+                                <p style="color: black; margin: 0;">Balancear costos vs. impacto ecológico. Ejemplo: decidir si invertir en tecnologías limpias aunque sean más costosas inicialmente pero beneficien al planeta.</p>
                             </div>
                         </div>
                     </div>
